<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- adding buttons to for different functions
     Add new post, Log Out  https://material.io/icons/#ic_add-->
    <item android:id="@+id/action_add"
        android:icon="@mipmap/ic_add_white_24dp"
        android:title="Add Post"
        app:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:title="Settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="Log Out"
        app:showAsAction="never" />

</menu>
